fix: fix pixelperfect shift in page-app section for <= 414px

--- a/src/scss/index/page-app.scss
+++ b/src/scss/index/page-app.scss
@@ -41,9 +41,16 @@
 @media (width <= 414px) {
   .page-app {
     .app {
-      &-img,
+      justify-content: center;
+
       &-description {
         width: 100%;
+      }
+
+      &-img {
+        img {
+          margin-left: 0;
+        }
       }
     }
   }
