--- a/src/scss/index/page-news.scss
+++ b/src/scss/index/page-news.scss
@@ -1,7 +1,7 @@
 @use "../mixins";
 
 .page-news {
-  padding-top: 83px;
+  padding-top: 100px;
 
   h2 {
     margin-top: 0;
