--- a/src/scss/index/page-pricing.scss
+++ b/src/scss/index/page-pricing.scss
@@ -69,5 +69,6 @@
 
   .footer {
     margin-top: 40px;
+    margin-bottom: 0;
   }
 }
